--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,34 @@
 <div class="author">
-  <h1 class="author__heading">Hi, I am Raddy.</h1>
-  <p class="author__body">Web developer and content creator.</p>
+    <h1 class="author__heading">Hi, I am Raddy.</h1>
+    <p class="author__body">Web developer and content creator.</p>
 </div>
 
-<img src="/img/nongdamgom.jpg" alt="person looking out through window" class="hero-image" width="981" height="528">
+<img
+    src="/img/nongdamgom.jpg"
+    alt="person looking out through window"
+    class="hero-image"
+    width="981"
+    height="528">
 
 <section class="articles">
     <h2 class="articles__heading">Latest Posts</h2>
 
-    <ul class="a=article-ul">
-        <li>
-            <a href="#">
-                <span>Post Title</span>
-                <span class="article-list_date">Date</span>
-            </a>
-        </li>
-    </ul>
+    <ul class="article-ul">
+        <% data.forEach(post => { %>
 
-    <a href="#" class="pagination">&lt; View Older Posts</a>
+            <li>
+                <a href="/post/<%= post._id %>">
+                    <span><%= post.title %></span>
+                    <span class="article-list_date"><%= post.createdAt.toDateString() %></span>
+                </a>
+            </li>
 
-</section>
+            <% }); %>
+
+            </ul>
+            <% if (nextPage !== null) { %>
+                <a href="/?page=<%= nextPage  %>" class="pagination">&lt; View Older Posts</a>
+            <% } %>
+            
+
+        </section>
