--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -7,6 +7,6 @@
             name="searchTerm"
             placeholder="Search the site...">
         </form>
-        <div id="searchColse">Close</div>
+        <div id="searchClose">Close</div>
     </div>
 </div>
